--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
     <li><a href="https://aleksandr19911s.github.io/proect_figma/" target="_blank">4 проект</a></li>
     <li><a href="https://aleksandr19911s.github.io/-Bootstrap_tem/" target="_blank">5 проект</a></li>
     <li><a href="https://aleksandr19911s.github.io/slide_show-2/" target="_blank">6 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/onlineStore/" target="_blank">7 проект</a></li>
   </ul>
   <hr>
   <h3>Зарплата на последнем месте: 35 000 руб</h3>
