--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <li>Знание системы контроля версий (GIT)</li>
     <li>Основы Linux и командной строки</li>
     <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
+    <li>Основы Javascript</li>
     <li>Figma</li>
     <li>MS Office</li>
   </ul>
