--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p><strong>ФИО:</strong>Шахрай А.Н</p>
     <p><strong>Дата рождения:</strong>30.10.1991</p>
     <p><strong>Образование:</strong>Высшее. МГТУ им. Г.И Носова. Факультет: Экономики и Управления</p>
-    <p><strong>Желаемые должности:</strong>Веб-разработчик на 1С Битрикс, тестировщик, системный администратор,аналитик</p>
+    <p><strong>Желаемые должности:</strong>Системный администратор,специалист технической поддержки</p>
   </div>
   <hr />
   <p class="experience"><strong>Опыт работы: </strong>Более 8 лет</p>
@@ -27,7 +27,6 @@
   <hr />
   <h3>Занимаемые должности</h3>
   <ul class="one">
-    <li>Официант</li>
     <li>Продавец - кассир</li>
     <li>Оперативный дежурный</li>
     <li>Продавец консультант</li>
@@ -37,29 +36,30 @@
   <hr />
   <h3>Навыки</h3>
   <ul class="too">
+    <li>Администрирование локальной сети(Одноранговая и доменная сеть)</li>
+    <li>Настройка и администрирование: Windows XP/7/8/10/11</li>
+    <li>Обслуживание серверных операционных семейства Windows Server (2008 - 2019)</li>
+    <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
+     <li>Удалённое администрирование (Radmin,AnyDesk ,RDP,LightManager,TeamViewer)</li>
+     <li>Системы виртуализации VmWare и Hyper-V</li>
+     <li>MS Office</li>
     <li>Знание 1С:Торговля и склад</li>
     <li>Microsoft Dynamics NAV</li>
     <li>HTML И СSS</li>
-    <li>Фреймворк Bootstrap</li>
     <li>PHP</li>
     <li>SQL,СУБД MySQL</li>
     <li>1C Битрикс</li>
     <li>Знание системы контроля версий (GIT)</li>
     <li>Основы Linux и командной строки</li>
-    <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
-    <li>Основы Javascript</li>
-    <li>Figma</li>
-    <li>MS Office</li>
   </ul>
   <hr />
   <h3>Курсы</h3>
   <ul>
     <li>
-      <a href="https://academy.fact.digital/" target="_blank">Факт Академия:</a> 1C Битрикс Веб-разработчик <a href="#">(Сертификат)</a>
-    </li>
+      <a href="https://academy.fact.digital/" target="_blank">Факт Академия:</a> 1C Битрикс Веб-разработчик </li>
+      <a href="https://it-skills.online/" target="_blank">it-skills:</a> Комплексное обучение системному администрированию </li>
     <li><a href="https://stepik.org/users/629363638/certificates?auth=login" target="_blank">Stepik</a></li>
     <li><a href="https://ru.hexlet.io/u/user-712d3cae238ac8d1" target="_blank">Хекслет</a></li>
-    <li><a href="https://sql-academy.org/ru/profile/86853" target="_blank">SQL Academy</a></li>
     <li>Курсы от 1С битрикс:
       <ol>
         <li>Контент-менеджер</li>
@@ -70,17 +70,16 @@
   <hr>
   <h3>Проекты на Github</h3>
   <ul class="container-flex">
-    <li><a href="https://aleksandr19911s.github.io/forms/" target="_blank">1 проект</a></li>
-    <li><a href="https://aleksandr19911s.github.io/-Mendeleev-table/" target="_blank">2 проект</a></li>
-    <li><a href="https://aleksandr19911s.github.io/proect_figma/" target="_blank">3 проект</a></li>
-    <li><a href=" https://aleksandr19911s.github.io/-Slide-show/" target="_blank">4 проект</a></li>
-    <li><a href="https://aleksandr19911s.github.io/-Bootstrap_tem/" target="_blank">5 проект</a></li>
-    <li><a href="https://aleksandr19911s.github.io/slide_show-2/" target="_blank">6 проект</a></li>
-    <li><a href="https://aleksandr19911s.github.io/onlineStore/" target="_blank">7 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/-Mendeleev-table/" target="_blank">1 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/proect_figma/" target="_blank">2 проект</a></li>
+    <li><a href=" https://aleksandr19911s.github.io/-Slide-show/" target="_blank">3 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/-Bootstrap_tem/" target="_blank">4 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/slide_show-2/" target="_blank">5 проект</a></li>
+    <li><a href="https://aleksandr19911s.github.io/onlineStore/" target="_blank">6 проект</a></li>
   </ul>
   <hr>
   <h3>Зарплата на последнем месте: 35 000 руб</h3>
-  <h3>Желаемая Зарплата: 45 000 руб</h3>
+  <h3>Желаемая Зарплата: 40 000 руб</h3>
   <hr>
   <strong>
     <h3>Мои социальные сети</h3>
@@ -96,21 +95,5 @@
   <h3>Связаться со мной</h3>
   <p><strong>Почта:</strong> shakhray.a1991@gmail.com</p>
   <p><strong>Телефон:</strong> 89823005436</p>
-  <p><a href="https://magnitogorsk.hh.ru/resume/7614d513ff0290bb6d0039ed1f733242324170" target="_blank">HeadHunter</a></p>
-  <hr>
-  <p>P.S Небольшая форма: данные она не отправляет на сервер!</p>
-  <div class="container-form">
-    <form action="#" method="#" class="form-container">
-      <label for="name"><i>Ваше имя:</i></label>
-      <input type="text" id="name" placeholder="Наишите имя" class="name" />
-      <label for="password"><i>Пароль:</i></label>
-      <input type="password" name="" id="password" placeholder="Введите пароль" class="password">
-      <label for="email"><i>email:</i></label>
-      <input type="email" id="email" placeholder="Наишите email" class="email" />
-      <label for="tel"><i>Телефон:</i></label>
-      <input type="tel" name="" id="tel" placeholder="Введите номер телефона" class="tel"/>
-      <input type="submit" class="button" />
-    </form>
-  </div>
 </body>
 </html>
