--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <li>Настройка и администрирование: Windows XP/7/8/10/11</li>
     <li>Обслуживание серверных операционных семейства Windows Server (2008 - 2019)</li>
     <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
-     <li>Удалённое администрирование (Radmin,AnyDesk ,RDP,LightManager,TeamViewer)</li>
+     <li>Удалённое администрирование (Radmin, AnyDesk , RDP, LightManager, TeamViewer)</li>
      <li>Системы виртуализации VmWare и Hyper-V</li>
      <li>MS Office</li>
     <li>Знание 1С:Торговля и склад</li>
@@ -79,7 +79,7 @@
   </ul>
   <hr>
   <h3>Зарплата на последнем месте: 35 000 руб</h3>
-  <h3>Желаемая Зарплата: 40 000 руб</h3>
+  <h3>Желаемая зарплата: 40 000 руб</h3>
   <hr>
   <strong>
     <h3>Мои социальные сети</h3>
