--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <ul class="too">
     <li>Администрирование локальной сети(Одноранговая и доменная сеть)</li>
     <li>Настройка и администрирование: Windows XP/7/8/10/11</li>
-    <li>Обслуживание серверных операционных семейства Windows Server (2008 - 2019)</li>
+    <li>Обслуживание серверных ОС Windows Server (2008 - 2019)</li>
     <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
      <li>Удалённое администрирование (Radmin, AnyDesk , RDP, LightManager, TeamViewer)</li>
      <li>Системы виртуализации VmWare и Hyper-V</li>
