--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <ul>
     <li>
       <a href="https://academy.fact.digital/" target="_blank">Факт Академия:</a> 1C Битрикс Веб-разработчик </li>
-      <a href="https://it-skills.online/" target="_blank">it-skills:</a> Комплексное обучение системному администрированию </li>
+      <a href="https://it-skills.online/" target="_blank">It-skills:</a> Комплексное обучение системному администрированию </li>
     <li><a href="https://stepik.org/users/629363638/certificates?auth=login" target="_blank">Stepik</a></li>
     <li><a href="https://ru.hexlet.io/u/user-712d3cae238ac8d1" target="_blank">Хекслет</a></li>
     <li>Курсы от 1С битрикс:
