--- a/index.html
+++ b/index.html
@@ -55,15 +55,14 @@
   <hr />
   <h3>Курсы</h3>
   <ul>
-    <li>
-      <a href="https://academy.fact.digital/" target="_blank">Факт Академия:</a> 1C Битрикс Веб-разработчик </li>
-      <a href="https://it-skills.online/" target="_blank">It-skills:</a> Комплексное обучение системному администрированию </li>
+    <li><a href="https://academy.fact.digital/" target="_blank">Факт Академия:</a> 1C Битрикс Веб-разработчик </li>
+     <li><a href="https://it-skills.online/" target="_blank">It-skills:</a> Комплексное обучение системному администрированию:<a href="#" target="_blank">Сертификат</a></li>
     <li><a href="https://stepik.org/users/629363638/certificates?auth=login" target="_blank">Stepik</a></li>
     <li><a href="https://ru.hexlet.io/u/user-712d3cae238ac8d1" target="_blank">Хекслет</a></li>
     <li>Курсы от 1С битрикс:
       <ol>
-        <li>Контент-менеджер</li>
-        <li>Администратор. Базовый</li>
+        <li><a href="https://dev.1c-bitrix.ru/certificates/learning.php?course=34" target="_blank">Контент-менеджер</a></li>
+        <li><a href="https://dev.1c-bitrix.ru/certificates/learning.php?course=35" target="_blank">Администратор. Базовый</a></li>
       </ol>
     </li>
   </ul>
