--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <p><strong>ФИО:</strong>Шахрай А.Н</p>
     <p><strong>Дата рождения:</strong>30.10.1991</p>
     <p><strong>Образование:</strong>Высшее. МГТУ им. Г.И Носова. Факультет: Экономики и Управления</p>
+    <p>Государственное и муниципальное управление</p>
     <p><strong>Желаемые должности:</strong>Системный администратор,специалист технической поддержки</p>
   </div>
   <hr />
