--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <p><strong>ФИО:</strong>Шахрай А.Н</p>
     <p><strong>Дата рождения:</strong>30.10.1991</p>
     <p><strong>Образование:</strong>Высшее. МГТУ им. Г.И Носова. Факультет: Экономики и Управления</p>
-    <p>Государственное и муниципальное управление</p>
     <p><strong>Желаемые должности:</strong>Системный администратор,специалист технической поддержки</p>
   </div>
   <hr />
@@ -82,7 +81,7 @@
   <h3>Желаемая зарплата: 40 000 руб</h3>
   <hr>
   <h3>Связаться со мной</h3>
-    <li><a href="https://t.me/Alexander_Shakhray" target="_blank">Телеграм</a></li>
+    <li><a href="https://t.me/Aleksander_Shakhray" target="_blank">Телеграм</a></li>
     <li>
       <a href="https://vk.com/vk_aleksandr1991" target="_blank">Вконтакте</a>
     </li>
