--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-
+  
 <head>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="styles.css" />
@@ -24,45 +24,50 @@
     </p>
   </div>
   <hr />
-  <p class="experience"><strong>Опыт работы: </strong>Более 8 лет</p>
+  <p class="experience"><strong>Опыт работы в IT сфере: </strong>Около 1 года</p>
   <p class="company">
     В таких компаниях:
-    <a href="https://galamart.ru/" target="_blank">Галамарт, </a>
-    <a href="https://www.citilink.ru/" target="_blank"> Ситилинк, </a>
-    <a href="https://www.delta.ru/" target="_blank">Дельта.</a>
+    <a href="https://fact.digital/" target="_blank">ООО ЦИТ ФАКТ, </a>
+    <a href="https://mmk-med.ru/" target="_blank">АНО Центральная Клиническая Медико-Санитарная Часть</a>
   </p>
   <hr />
-  <h3>Занимаемые должности</h3>
+  <h3>ООО ЦИТ ФАКТ </h3>
+  <h3>Обязанности:</h3>
   <ul class="one">
-    <li>Продавец - кассир</li>
-    <li>Оперативный дежурный</li>
-    <li>Продавец консультант</li>
-    <li>Кладовщик</li>
-    <li>Менеджер по логистике</li>
+    <li>Организация рабочего места сотрудников, подключение , настройка ПК и периферии   (Установка Windows 10,создание пользователей, агента Zabbix, оргтехники, подключение к LAN сети)</li>
+    <li>Инвентаризация и мониторинг техники компании (Zabbix)</li>
+    <li>Устранение проблем с ПК сотрудников офиса (ПО ,замена железа)</li>
+    <li>Обновление ПО и системных компонентов</li>
+    <li>Мониторинг работы серверов и инцидентная поддержка  через Zabbix ( CentOS , Ubuntu)</li>
+    <li>Мониторинг производительности систем и устранение неполадок  </li>
+    <li>Добавление разработчиков в песочницы (Ansible)</li>
+    <li>Стек LAMP (Linux,nginx, apache,mysql,php)</li>
+    <li> Git , GitLab</li>
+    <li> CMS 1C-Битрикс</li>
+    <li> MikroTik</li>
   </ul>
   <hr />
-  <h3>Навыки</h3>
-  <ul class="too">
-    <li>Администрирование локальной сети(Одноранговая и доменная сеть)</li>
-    <li>Настройка и администрирование: Windows XP/7/8/10/11</li>
-    <li>Обслуживание серверных ОС Windows Server (2008 - 2019)</li>
-    <li>Основы клиент серверного взаимодействия: HTTP, DNS, DHCP, TCP/IP</li>
-    <li>
-      Удалённое администрирование (Radmin, AnyDesk , RDP, LightManager,
-      TeamViewer)
-    </li>
-    <li>Системы виртуализации VmWare и Hyper-V</li>
-    <li>MS Office</li>
-    <li>Знание 1С:Торговля и склад</li>
-    <li>Microsoft Dynamics NAV</li>
-    <li>HTML И СSS</li>
-    <li>PHP</li>
-    <li>SQL,СУБД MySQL</li>
-    <li>1C Битрикс</li>
-    <li>Знание системы контроля версий (GIT)</li>
-    <li>Основы Linux и командной строки</li>
+
+  <h3>АНО Центральная Клиническая Медико-Санитарная Часть</h3>
+  <h3>Обязанности:</h3>
+  <ul class="one">
+    <li>Развёртывание  и администрирование системы мониторинга Zabbix (Ubuntu Server 22.04.4 LTS)</li>
+    <li>Создание карты сети в Zabbix ( сетевых устройств,серверов).Отображение на карте недоступность узлов.</li>
+    <li>Настройка в Zabbix ( уведомлений в телеграмм о недоступности устройств, остатка места на диске, загрузка CPU, RAM, сетевых карт)</li>
+    <li>Создание дашбордов uptime устройств,основных показателей</li>
+    <li>Настройка клиентских ПК ( сборка ПК, установка ОС - Windows 7,Windows 10 , Windows 11, ПО)</li>
+    <li> Подключение ПК к доменной сети </li>
+    <li>Подключение периферии (принтера,дисководы,камеры)</li>
+    <li>Установка ПО( MS office, браузер, Антивирус, Rudesktop,VNC,RDP)</li>
+    <li> Настройка АРМ мед работника (qMS - медицинская информ система, КриптоПро - электронные подписи, Weasis - просмотр КТ снимков, Zimbra - почта, АТАЧ - СЭД</li>
+    <li> Перенос данных с СХД ( Acronis True Image, Paragon)</li>
+    <li> Помощь в проведении ВКС (Vinteo)</li>
+    <li> Сопровождение мероприятий со стороны IT</li>
+    <li> Обжимка кабеля и подключение к сети</li>
+    <li> Консультирование и помощь пользователям в решении их проблем</li>
   </ul>
   <hr />
+
   <h3>Курсы</h3>
   <ul>
     <li>
@@ -71,17 +76,16 @@
     </li>
     <li>
       <a href="https://it-skills.online/" target="_blank">It-skills:</a>
-      Комплексное обучение системному администрированию:<a href="Комплексное обучение системному администрированию.jpg" target="_blank">Сертификат </a> 
+      Комплексное обучение системному администрированию:
     </li>
         <iframe src="https://drive.google.com/file/d/1LziUdo_uEwFnwn66LxcHbkmrCvMo-at1/preview" width="350" height="350" allow="autoplay"></iframe>
-
     <li>
-      <a href="https://stepik.org/users/629363638/certificates?auth=login" target="_blank">Stepik</a>
+      <a href="https://it-skills.online/" target="_blank">It-skills:</a>
+      Zabbix.Мониторинг IT инфраструктуры предприятия:
     </li>
     <li>
-      <a href="https://ru.hexlet.io/u/user-712d3cae238ac8d1" target="_blank">Хекслет</a>
+        <iframe src="https://drive.google.com/file/d/12bl2xGHyDbQ6WYrK9fewMP5pqAYlfLDC/preview" width="350" height="350" allow="autoplay"></iframe>
     </li>
-    <li>
       Курсы от 1С битрикс:
       <ol>
         <li>
@@ -105,33 +109,39 @@
   </ul>
   <hr />
   <h3>Проекты на Github</h3>
-  <ul class="container-flex">
+  <ol class="container-flex">
     <li>
-      <a href="https://aleksandr19911s.github.io/-Mendeleev-table/" target="_blank">1 проект</a>
+      <a href="https://aleksandr19911s.github.io/-Mendeleev-table/" target="_blank">таблица Менделеева</a>
     </li>
     <li>
-      <a href="https://aleksandr19911s.github.io/proect_figma/" target="_blank">2 проект</a>
+      <a href="https://aleksandr19911s.github.io/proect_figma/" target="_blank"> сайт по figme</a>
     </li>
     <li>
-      <a href=" https://aleksandr19911s.github.io/-Slide-show/" target="_blank">3 проект</a>
+      <a href=" https://aleksandr19911s.github.io/-Slide-show/" target="_blank">слайдер</a>
     </li>
     <li>
-      <a href="https://aleksandr19911s.github.io/-Bootstrap_tem/" target="_blank">4 проект</a>
+      <a href="https://aleksandr19911s.github.io/-Bootstrap_tem/" target="_blank"> темная , светлая тема</a>
     </li>
     <li>
-      <a href="https://aleksandr19911s.github.io/slide_show-2/" target="_blank">5 проект</a>
+      <a href="https://aleksandr19911s.github.io/slide_show-2/" target="_blank">слайдер</a>
     </li>
     <li>
-      <a href="https://aleksandr19911s.github.io/onlineStore/" target="_blank">6 проект</a>
+      <a href="https://aleksandr19911s.github.io/onlineStore/" target="_blank"> интернет магазин</a>
     </li>
-  </ul>
+    <li>
+      <a href="https://aleksandr19911s.github.io/game_snake_2/" target="_blank"> игра змейка</a>
+    </li>
+    <li>
+      <a href="https://aleksandr19911s.github.io/mobile_snake/" target="_blank">Мобильная  игра змейка</a>
+    </li>
+  </ol>
   <hr />
-  <h3>Зарплата на последнем месте: 35 000 руб</h3>
-  <h3>Желаемая зарплата: 40 000 руб</h3>
+  <h3>Зарплата на последнем месте: 45 000 руб</h3>
+  <h3>Желаемая зарплата: 50 000 руб</h3>
   <hr />
   <h3>Связаться со мной</h3>
   <li>
-    <a href="https://t.me/Aleksander_Shakhray" target="_blank">Телеграм</a>
+    <a href="https://t.me/Aleksander_Shahrai" target="_blank">Телеграм</a>
   </li>
   <li>
     <a href="https://vk.com/vk_aleksandr1991" target="_blank">Вконтакте</a>
@@ -139,5 +149,4 @@
   <p><strong>Почта:</strong> shakhray.a1991@gmail.com</p>
   <p><strong>Телефон:</strong> 89823005436</p>
 </body>
-
 </html>
